// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButton> should render as expected 1`] = `
<label
  className="RadioButtonStyle__RadioContainer-sc-1xclcfi-3 eyRelA aries-radiobtn"
  tabIndex={0}
>
  <input
    name="job-type"
    type="radio"
    value="full-time"
  />
  <span
    className="RadioButtonStyle__RadioIcon-sc-1xclcfi-0 hinYyw"
    data-testid="radio-icon"
    size="regular"
  />
  <span
    className="RadioButtonStyle__RadioLabel-sc-1xclcfi-1 xviKd radiobtn-content"
    size="regular"
    tabIndex={-1}
  >
    Full Time
  </span>
</label>
`;

exports[`<RadioButton> should render as expected 2`] = `
<label
  className="RadioButtonStyle__RadioContainer-sc-1xclcfi-3 kINzCj aries-radiobtn"
  tabIndex={0}
>
  <input
    name="job-type"
    type="radio"
    value="full-time"
  />
  <span
    className="RadioButtonStyle__RadioIcon-sc-1xclcfi-0 fYRZeZ"
    data-testid="radio-icon"
    size="regular"
  />
  <span
    className="RadioButtonStyle__RadioLabel-sc-1xclcfi-1 ioQzrz radiobtn-content"
    size="regular"
    tabIndex={-1}
  >
    Full Time
  </span>
</label>
`;

exports[`<RadioButton> should render as expected 3`] = `
Array [
  <label
    className="RadioButtonStyle__RadioContainer-sc-1xclcfi-3 eyRelA aries-radiobtn"
    tabIndex={0}
  >
    <input
      name="job-type"
      type="radio"
      value="full-time"
    />
    <span
      className="RadioButtonStyle__RadioIcon-sc-1xclcfi-0 hinYyw"
      data-testid="radio-icon"
      size="regular"
    />
    <span
      className="RadioButtonStyle__RadioLabel-sc-1xclcfi-1 xviKd radiobtn-content"
      size="regular"
      tabIndex={-1}
    >
      Full Time
    </span>
  </label>,
  <label
    className="RadioButtonStyle__RadioContainer-sc-1xclcfi-3 eyRelA aries-radiobtn"
    tabIndex={0}
  >
    <input
      name="job-type"
      type="radio"
      value="intership"
    />
    <span
      className="RadioButtonStyle__RadioIcon-sc-1xclcfi-0 hinYyw"
      data-testid="radio-icon"
      size="regular"
    />
    <span
      className="RadioButtonStyle__RadioLabel-sc-1xclcfi-1 xviKd radiobtn-content"
      size="regular"
      tabIndex={-1}
    >
      Intership
    </span>
  </label>,
]
`;

exports[`<RadioButton> should render as expected 4`] = `
Array [
  <label
    className="RadioButtonStyle__RadioContainer-sc-1xclcfi-3 eyRelA aries-radiobtn"
    tabIndex={0}
  >
    <input
      checked={true}
      name="job-type"
      type="radio"
      value="full-time"
    />
    <span
      className="RadioButtonStyle__RadioIcon-sc-1xclcfi-0 hinYyw"
      data-testid="radio-icon"
      size="regular"
    />
    <span
      className="RadioButtonStyle__RadioLabel-sc-1xclcfi-1 xviKd radiobtn-content"
      size="regular"
      tabIndex={-1}
    >
      Full Time
    </span>
  </label>,
  <label
    className="RadioButtonStyle__RadioContainer-sc-1xclcfi-3 eyRelA aries-radiobtn"
    tabIndex={0}
  >
    <input
      name="job-type"
      type="radio"
      value="intership"
    />
    <span
      className="RadioButtonStyle__RadioIcon-sc-1xclcfi-0 hinYyw"
      data-testid="radio-icon"
      size="regular"
    />
    <span
      className="RadioButtonStyle__RadioLabel-sc-1xclcfi-1 xviKd radiobtn-content"
      size="regular"
      tabIndex={-1}
    >
      Intership
    </span>
  </label>,
]
`;
